@@ -107,6 +107,9 @@ SaveInterval 5
 # how often (in minutes) data is saved when all interface are offline
 OfflineSaveInterval 30
 
+# rescan database after save for new interfaces to be monitored (1 = enabled, 0 = disabled)
+RescanDatabaseOnSave 1
+
 # automatically start monitoring all interfaces not found in the database
 # (1 = enabled, 0 = disabled)
 AlwaysAddNewInterfaces 0
